--- a/public/index.html
+++ b/public/index.html
@@ -4,11 +4,11 @@
     <meta charset="utf-8">
     <meta content="width=device-width, initial-scale=1" name="viewport">
     <link href="/css/site.css" rel="stylesheet" type="text/css">
+    <title>Clojure for beginners</title>
   </head>
   <body>
     <div id="app">
-      <h3>ClojureScript has not been compiled!</h3>
-      <p>please run <b>npx shadow-cljs watch app</b> in order to start the compiler</p>
+      <noscript>Sorry, Clojure for beginners requires JavaScript.</noscript>
     </div>
     <script src="/js/app.js" type="text/javascript"></script>
     <script type="text/javascript">cfb.core.init_BANG_();</script>
