--- a/public/index.html
+++ b/public/index.html
@@ -3,14 +3,14 @@
   <head>
     <meta charset="utf-8">
     <meta content="width=device-width, initial-scale=1" name="viewport">
-    <link href="/css/site.css" rel="stylesheet" type="text/css">
+    <link href="css/site.css" rel="stylesheet" type="text/css">
     <title>Clojure for beginners</title>
   </head>
   <body>
     <div id="app">
       <noscript>Sorry, Clojure for beginners requires JavaScript.</noscript>
     </div>
-    <script src="/js/app.js" type="text/javascript"></script>
+    <script src="js/app.js" type="text/javascript"></script>
     <script type="text/javascript">cfb.core.init_BANG_();</script>
   </body>
 </html>
